# revere

./: .coverage  .gitignore  00_START_HERE.md  =0.2.0  CRITICAL_ASSERTIONS.md  DESIGN_REVIEW_SUMMARY.md  FIXES.md  IMPLEMENTATION_CHECKLIST.md  README.md  TEST_PLAN_CALENDAR_FEATURES.md  TEST_PLAN_SUMMARY.md  pyproject.toml  requirements.txt
apps/api/: main.py
apps/web/: TEST_CHAT_SUITE_SUMMARY.md  TEST_SUITE_SUMMARY.md  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
backend/: config.py  deps.py
backend/agents/: __init__.py  backtest_diagnostics.py  chat_agent.py  experiment_librarian.py  feature_researcher.py  generation_comparator.py  graph.py  memory_writer.py  model_researcher.py  state.py  strategy_researcher.py  supervisor.py
backend/automl/: __init__.py  dataset_builder.py  records.py  sagemaker_runner.py
backend/backtest/: costs.py  data_loader.py  engine.py  fills.py  metrics.py
backend/connectors/: dukascopy.py  instruments.py  oanda.py
backend/data/: aggregate.py  chat_repository.py  duckdb_store.py  local_artifacts.py  local_metadata.py  market.duckdb.wal  normalize.py  quality.py  repositories.py
backend/features/: compute.py  evaluate.py  feature_library.py  sandbox.py
backend/jobs/: automl.py  backtest.py  dukascopy_download.py  hmm.py  ingestion.py  pending_backtest.py  robustness_battery.py  (+2 more)
legacy/: new_plan.md  status.md
prompts/: DIME_prompt.md  planning_phase_5.md  prompt_to_improve_chat.md  stage_5_phase_b.md  stage_5_phase_c.md  stage_5_step_1.md
scripts/: diagnose_backtest.py  migrate_db.py
(+332 files in other folders)
